# student_needs_gh

./: Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
get_sn/: __init__.py  dataset.py  features.py  plots.py
get_sn/modeling/: predict.py  train.py
models/: marketdata_models2.ipynb
notebooks/: market_data_cleaned.ipynb  marketdata_cleaning.ipynb  marketdata_models.py  marketdata_models2.ipynb  sprint2.ipynb  student_monthly_models.ipynb  studentmonthlyexpense_cleaning.ipynb  studentspending_cleaning.ipynb
reports/: sprint2.html
sprint2_folder/: 2024marketdata.csv  Assignment1.ipynb
